grub2 (2.12-2) UNRELEASED; urgency=medium

  * Update signing-template Uploaders to match main package.

 -- Colin Watson <cjwatson@debian.org>  Tue, 23 Jan 2024 13:42:08 +0000

grub2 (2.12-1) unstable; urgency=medium

  [ Mate Kukri ]
  * New upstream version, 2.12
  * d/patches: Rebase on `upstream/2.12` and drop superseded patches:
    - Dropping patches now included upstream:
      + d/p/ntfs-cve-fixes/*: Fixes for NTFS OOB CVE
      + d/p/upstream/xfs-*: XFS parsing fixes
      + d/p/upstream/unmerged-usr-shebang.patch
    - Dropping patch replaced with configure option:
      + d/p/dejavu-font-path.patch
  * d/rules: Pass configure option '--enable-grub-themes'
  * d/rules: Provide Debian specific DejaVu path via configure
  * d/{control,rules}: Use default gcc version
  * d/p/extra_deps_lst.patch:
    Checkout "extra_deps.lst" from upstream/master
  * d/p/sb/revert-efi-fallback-to-legacy.patch:
    Also revert newer fallback patch

  [ Julian Andres Klode ]
  * Add Mate to Uploaders

 -- Mate Kukri <mate.kukri@canonical.com>  Mon, 15 Jan 2024 09:54:55 +0000

grub2 (2.12~rc1-13) unstable; urgency=medium

  * No-change rebuild to retrigger signing following binNMU breakage

 -- Julian Andres Klode <jak@debian.org>  Fri, 12 Jan 2024 19:00:41 +0100

grub2 (2.12~rc1-12) unstable; urgency=medium

  [ Mate Kukri ]
  * Port UEFI based network stack to 2.12 (LP: #2039081)
  * efi: Correct image unloading behavior
  * Prevent the incorrect use of `UnloadImage()` by binaries loaded by peimage
  * efinet: HTTP_MESSAGE fix field size (LP: #2043084)

  [ Abe Wieland ]
  * Maintain administrator value for os-prober

  [ Julian Andres Klode ]
  * Cherry-pick upstream XFS directory extent parsing fixes (Closes: #1051543)
    (LP: #2039172)

 -- Julian Andres Klode <jak@debian.org>  Thu, 09 Nov 2023 14:13:44 +0200

grub2 (2.12~rc1-11) unstable; urgency=medium

  [ Mate Kukri ]
  * SECURITY UPDATE: Crafted file system images can cause out-of-bounds write