@@ -226,7 +226,7 @@ index a5bf3a7..59d53f6 100644
      GRUB_FILE_TYPE_LOADENV,
      GRUB_FILE_TYPE_SAVEENV,
 diff --git a/util/grub.d/10_linux.in b/util/grub.d/10_linux.in
-index 9fb7c53..17cc3c5 100644
+index aa6c1ac..186c20b 100644
 --- a/util/grub.d/10_linux.in
 +++ b/util/grub.d/10_linux.in
 @@ -23,6 +23,7 @@ datarootdir="@datarootdir@"
@@ -237,7 +237,7 @@ index 9fb7c53..17cc3c5 100644
  
  . "$pkgdatadir/grub-mkconfig_lib"
  
-@@ -147,9 +148,10 @@ linux_entry ()
+@@ -146,9 +147,10 @@ linux_entry ()
        if [ "x$GRUB_GFXPAYLOAD_LINUX" != xtext ]; then
  	  echo "	load_video" | sed "s/^/$submenu_indentation/"
        fi
@@ -251,7 +251,7 @@ index 9fb7c53..17cc3c5 100644
    fi
  
    echo "	insmod gzio" | sed "s/^/$submenu_indentation/"
-@@ -222,6 +224,35 @@ prepare_root_cache=
+@@ -221,6 +223,35 @@ prepare_root_cache=
  boot_device_id=
  title_correction_code=
  
