@@ -31,10 +31,10 @@ Last-Update: 2020-08-20
  1 file changed, 3 insertions(+), 1 deletion(-)
 
 diff --git a/util/grub.d/10_linux.in b/util/grub.d/10_linux.in
-index d0c76d8..36171bf 100644
+index 4adb51d..a29f705 100644
 --- a/util/grub.d/10_linux.in
 +++ b/util/grub.d/10_linux.in
-@@ -263,7 +263,9 @@ else
+@@ -262,7 +262,9 @@ else
    cat << EOF
  if [ "\${recordfail}" != 1 ]; then
    if [ -e \${prefix}/gfxblacklist.txt ]; then
