@@ -339,7 +339,7 @@ index 6a90e09..350ed25 100644
        if (auto_boot)
  	grub_menu_execute_with_fallback (menu, e, autobooted,
 diff --git a/util/grub.d/10_linux.in b/util/grub.d/10_linux.in
-index 11caf69..f908bd5 100644
+index b0860b2..887355d 100644
 --- a/util/grub.d/10_linux.in
 +++ b/util/grub.d/10_linux.in
 @@ -21,6 +21,7 @@ prefix="@prefix@"
@@ -350,7 +350,7 @@ index 11caf69..f908bd5 100644
  
  . "$pkgdatadir/grub-mkconfig_lib"
  
-@@ -160,20 +161,28 @@ linux_entry ()
+@@ -159,20 +160,28 @@ linux_entry ()
      fi
      printf '%s\n' "${prepare_boot_cache}" | sed "s/^/$submenu_indentation/"
    fi
