@@ -89,10 +89,10 @@ index 83e9636..1431673 100644
  	  title="$(gettext_printf "%s, with kFreeBSD %s" "${os}" "${version}")"
        fi
 diff --git a/util/grub.d/10_linux.in b/util/grub.d/10_linux.in
-index 77d5bd2..9339926 100644
+index ed5748a..c4ed052 100644
 --- a/util/grub.d/10_linux.in
 +++ b/util/grub.d/10_linux.in
-@@ -128,7 +128,7 @@ linux_entry ()
+@@ -127,7 +127,7 @@ linux_entry ()
    if [ x$type != xsimple ] ; then
        case $type in
  	  recovery)
