@@ -15,7 +15,7 @@ Patch-Name: mkconfig-ubuntu-distributor.patch
  1 file changed, 8 insertions(+), 1 deletion(-)
 
 diff --git a/util/grub.d/10_linux.in b/util/grub.d/10_linux.in
-index dc23c3c..11caf69 100644
+index 858052c..b0860b2 100644
 --- a/util/grub.d/10_linux.in
 +++ b/util/grub.d/10_linux.in
 @@ -32,7 +32,14 @@ CLASS="--class gnu-linux --class gnu --class os"
