@@ -17,9 +17,9 @@ Last-Update: 2013-12-25
 Patch-Name: mkconfig-ubuntu-recovery.patch
 ---
  configure.ac                | 11 +++++++++++
- util/grub.d/10_linux.in     | 14 +++++++++++++-
+ util/grub.d/10_linux.in     | 15 +++++++++++++--
  util/grub.d/30_os-prober.in |  2 +-
- 3 files changed, 25 insertions(+), 2 deletions(-)
+ 3 files changed, 25 insertions(+), 3 deletions(-)
 
 diff --git a/configure.ac b/configure.ac
 index cd667a2..f19356e 100644
@@ -44,7 +44,7 @@ index cd667a2..f19356e 100644
  
  AC_SUBST([FONT_SOURCE])
 diff --git a/util/grub.d/10_linux.in b/util/grub.d/10_linux.in
-index cc6ae58..dc23c3c 100644
+index cc6ae58..858052c 100644
 --- a/util/grub.d/10_linux.in
 +++ b/util/grub.d/10_linux.in
 @@ -20,6 +20,7 @@ set -e
@@ -55,15 +55,23 @@ index cc6ae58..dc23c3c 100644
  
  . "$pkgdatadir/grub-mkconfig_lib"
  
-@@ -86,6 +87,15 @@ esac
+@@ -48,7 +49,11 @@ case ${GRUB_DEVICE} in
+   ;;
+ esac
+ 
+-: ${GRUB_CMDLINE_LINUX_RECOVERY:=single}
++if [ -x /lib/recovery-mode/recovery-menu ]; then
++    : ${GRUB_CMDLINE_LINUX_RECOVERY:=recovery}
++else
++    : ${GRUB_CMDLINE_LINUX_RECOVERY:=single}
++fi
+ 
+ # Default to disabling partition uuid support to maintian compatibility with
+ # older kernels.
+@@ -86,6 +91,10 @@ esac
  
  title_correction_code=
  
-+if [ -x /lib/recovery-mode/recovery-menu ]; then
-+    GRUB_CMDLINE_LINUX_RECOVERY="${GRUB_CMDLINE_LINUX_RECOVERY} recovery"
-+else
-+    GRUB_CMDLINE_LINUX_RECOVERY="${GRUB_CMDLINE_LINUX_RECOVERY} single"
-+fi
 +if [ "$ubuntu_recovery" = 1 ]; then
 +    GRUB_CMDLINE_LINUX_RECOVERY="$GRUB_CMDLINE_LINUX_RECOVERY nomodeset"
 +fi
@@ -71,7 +79,7 @@ index cc6ae58..dc23c3c 100644
  linux_entry ()
  {
    os="$1"
-@@ -125,7 +135,9 @@ linux_entry ()
+@@ -125,7 +134,9 @@ linux_entry ()
        if [ "x$GRUB_GFXPAYLOAD_LINUX" != xtext ]; then
  	  echo "	load_video" | sed "s/^/$submenu_indentation/"
        fi
