@@ -257,7 +257,7 @@ index 6a316a5..f3e04cc 100644
  EOF
  }
 diff --git a/util/grub.d/10_linux.in b/util/grub.d/10_linux.in
-index f908bd5..9fb7c53 100644
+index 887355d..aa6c1ac 100644
 --- a/util/grub.d/10_linux.in
 +++ b/util/grub.d/10_linux.in
 @@ -22,6 +22,7 @@ exec_prefix="@exec_prefix@"
@@ -268,7 +268,7 @@ index f908bd5..9fb7c53 100644
  
  . "$pkgdatadir/grub-mkconfig_lib"
  
-@@ -131,6 +132,9 @@ linux_entry ()
+@@ -130,6 +131,9 @@ linux_entry ()
    else
        echo "menuentry '$(echo "$os" | grub_quote)' ${CLASS} \$menuentry_id_option 'gnulinux-simple-$boot_device_id' {" | sed "s/^/$submenu_indentation/"
    fi      
