@@ -39,7 +39,7 @@ index 6812742..7f43651 100644
  
  AC_SUBST([FONT_SOURCE])
 diff --git a/util/grub.d/10_linux.in b/util/grub.d/10_linux.in
-index 17cc3c5..77d5bd2 100644
+index 186c20b..ed5748a 100644
 --- a/util/grub.d/10_linux.in
 +++ b/util/grub.d/10_linux.in
 @@ -24,6 +24,7 @@ ubuntu_recovery="@UBUNTU_RECOVERY@"
@@ -50,7 +50,7 @@ index 17cc3c5..77d5bd2 100644
  
  . "$pkgdatadir/grub-mkconfig_lib"
  
-@@ -106,6 +107,14 @@ if [ "$ubuntu_recovery" = 1 ]; then
+@@ -105,6 +106,14 @@ if [ "$ubuntu_recovery" = 1 ]; then
      GRUB_CMDLINE_LINUX_RECOVERY="$GRUB_CMDLINE_LINUX_RECOVERY nomodeset"
  fi
  
@@ -65,7 +65,7 @@ index 17cc3c5..77d5bd2 100644
  linux_entry ()
  {
    os="$1"
-@@ -151,7 +160,7 @@ linux_entry ()
+@@ -150,7 +159,7 @@ linux_entry ()
    fi
    if ([ "$ubuntu_recovery" = 0 ] || [ x$type != xrecovery ]) && \
       ([ "x$GRUB_GFXPAYLOAD_LINUX" != x ] || [ "$gfxpayload_dynamic" = 1 ]); then
@@ -74,7 +74,7 @@ index 17cc3c5..77d5bd2 100644
    fi
  
    echo "	insmod gzio" | sed "s/^/$submenu_indentation/"
-@@ -224,6 +233,23 @@ prepare_root_cache=
+@@ -223,6 +232,23 @@ prepare_root_cache=
  boot_device_id=
  title_correction_code=
  
