@@ -1,8 +1,12 @@
 grub2 (2.12-2) UNRELEASED; urgency=medium
 
+  [ Colin Watson ]
   * Update signing-template Uploaders to match main package.
 
- -- Colin Watson <cjwatson@debian.org>  Tue, 23 Jan 2024 13:42:08 +0000
+  [ Mate Kukri ]
+  * d/p/mkconfig-ubuntu-recovery.patch: Use "recovery" instead of "single recovery" for recovery mode bootparams
+
+ -- Mate Kukri <mate.kukri@canonical.com>  Mon, 29 Jan 2024 10:59:54 +0000
 
 grub2 (2.12-1) unstable; urgency=medium
 
